--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/appsettings.json
@@ -1,10 +1,10 @@
 {
   "AzureAd": {
-    "Instance": "",
-    "TenantId": "",
-    "ApplicationIdURI": "",
-    "ValidIssuers": "",
-    "GraphScope": ""
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "d563de1f-957d-4a54-bb39-231c89b34aa6",
+    "ApplicationIdURI": "api://aca4e7900c31.ngrok.io/ab298bd8-71a0-415b-a217-6de219bbc7f1",
+    "ValidIssuers": "https://login.microsoftonline.com/d563de1f-957d-4a54-bb39-231c89b34aa6/v2.0,https://sts.windows.net/d563de1f-957d-4a54-bb39-231c89b34aa6/",
+    "GraphScope": "openid profile offline_access https://graph.microsoft.com/User.ReadBasic.All https://graph.microsoft.com/People.Read https://graph.microsoft.com/Directory.Read.All https://graph.microsoft.com/Calendars.ReadWrite"
   },
   "Logging": {
     "LogLevel": {
@@ -12,15 +12,15 @@
     }
   },
   "ApplicationInsights": {
-    "InstrumentationKey": "",
+    "InstrumentationKey": "4b56a305-0868-498c-ab1e-bc561d706a07",
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Information"
     }
   },
   "App": {
-    "AppBaseUri": "",
-    "ManifestId": "",
+    "AppBaseUri": "https://aca4e7900c31.ngrok.io",
+    "ManifestId": "eb3d21e5-1635-4334-a625-19249df25173",
     "CacheDurationInMinutes": 60,
     "EventsPageSize": 30
   },
@@ -33,7 +33,7 @@
     "retryCount": 2
   },
   "KeyVault": {
-    "BaseURL": ""
+    "BaseURL": "https://cxuemployeetrainingvault.vault.azure.net/secrets/"
   },
   "KeyVaultStrings": {
     "StorageConnection": "StorageConnection--SecretKey",
