--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/Microsoft.Teams.Apps.EmployeeTraining.csproj
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/Microsoft.Teams.Apps.EmployeeTraining.csproj
@@ -31,7 +31,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.ApplicationInsights" Version="2.14.0" />
     <PackageReference Include="Microsoft.Graph" Version="3.9.0" />
-    <PackageReference Include="Microsoft.Graph.Beta" Version="0.25.0-preview" />
+    <PackageReference Include="Microsoft.Graph.Beta" Version="4.5.0-preview" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.17.0" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -41,6 +41,7 @@
     <PackageReference Include="Polly" Version="7.2.1" />
     <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
